udocker (1.0.2)

  * Fix accelerated seccomp on kernels >= 4.8.0
  * Fix download on repositories that fail authentication on /v2
  * Fix run verification binaries with recursive symbolic links

udocker (1.0.1)

  * Minor bugfixes
  * Executable name changed from udocker.py to udocker
  * Added support for login into docker repositories
  * Added support for private repositories
  * Added support for listing of v2 repositories catalog
  * Added checksum verification for sha256 layers
  * Improved download handling for v1 and v2 repositories
  * Improved installation tarball structure
  * Insecure flag fixed
  * Address seccomp change introduced on kernels >= 4.8.0
  * Utilities for packaging
  * Improved verbose levels, messaging and output
    - closes: #24
  * Fully implement support for registry selection --registry parameter
    - closes: #29
  * Provide support for private repositories e.g. gitlab registries
    - closes: #30
  * Provide --insecure command line parameter for SSL requests
    - closes: #31

udocker (1.0.0)

  * Initial version
